--- a/public/color2.html
+++ b/public/color2.html
@@ -7,7 +7,7 @@
     <title>My Prac 4 Express Server</title>
 </head>
 <body>
-    <h1 id="heading"></h1>
+    <h1 id="heading">color2.html</h1>
     <button onclick="sendRequest()">button</button>
     <script>
         function sendRequest(){
