--- a/public/color2.html
+++ b/public/color2.html
@@ -22,7 +22,7 @@
             xhr.open("GET",'color.txt')
             xhr.send()
         }
-        sendRequest
+        sendRequest()
     </script>
 </body>
 </html>
