--- a/public/log2.html
+++ b/public/log2.html
@@ -15,7 +15,7 @@
             if(xhr.readyState==4 && xhr.status==200){
                 ul.innerHTML = ""
                 let res=JSON.prase(xhr.response)
-                for(let i=0; i<res; i++){
+                for(let i=0; i<res.length; i++){
                     let li=document.createElement("li")
                     li.innerText = res[i]
                     ul.appendChild(li)
