--- a/public/log2.html
+++ b/public/log2.html
@@ -27,6 +27,7 @@
 
         setInterval(function(){
             xhr.open("GET","/log-ro.json")
+            xhr.send()
         },1000)
     </script>
 </body>
