--- a/public/log2.html
+++ b/public/log2.html
@@ -14,7 +14,7 @@
         xhr.onreadystatechange=function(){
             if(xhr.readyState==4 && xhr.status==200){
                 ul.innerHTML = ""
-                let res=JSON.prase(xhr.response)
+                let res=JSON.parse(xhr.response)
                 for(let i=0; i<res.length; i++){
                     let li=document.createElement("li")
                     li.innerText = res[i]
